--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class='container'>
     <div class='card'>
       <h1>Anne Costa</h1>
-      <img src="/images/profile.JPG" width="100px" height="100px" alt="Anne Costa" class="img-circle">
+      <img src="images/profile.jpg" width="100px" height="100px" alt="Anne Costa" class="img-circle">
        <p>
       Programmer, designer and Dualipa's big fan.
       </p>
